--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css"></link>
+    <title>Coding Quiz</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Coding Quiz</h1>
+    </header>
+    <button id="qstart">Begin!</button>
+    <section>
+        <p>Time</p>
+    </section>
+    <section>
+        <p id="qquestion"></p>
+        <li>
+            <ul class="qanswer"></ul>
+            <ul class="qanswer"></ul>
+            <ul class="qanswer"></ul>
+            <ul class="qanswer"></ul>
+
+        </li>
+    </section>
+    <script rel=".Assets/script.js"></script>
 </body>
 </html>
