--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section>
         <p id="qquestion"></p>
         <li>
-            <ul class="qanswer"></ul>
-            <ul class="qanswer"></ul>
-            <ul class="qanswer"></ul>
-            <ul class="qanswer"></ul>
+            <ul class="qanswer"><button></button></ul>
+            <ul class="qanswer"><button></button></ul>
+            <ul class="qanswer"><button></button></ul>
+            <ul class="qanswer"><button></button></ul>
 
         </li>
     </section>
