added seconds decrement function to script.js renamed asset folder to be fully lowercase

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <button id="qstart">Begin!</button>
     <section>
-        <p>Time</p>
+        <h2 id="qtimer"></h2>
     </section>
     <section>
         <p id="qquestion"></p>
@@ -25,6 +25,6 @@
 
         </li>
     </section>
-    <script rel=".Assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
