fixed id errors in html, added quiz question added functions script.js

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section>
         <p id="qquestion"></p>
         <li>
-            <ul class="qanswer"><button></button></ul>
-            <ul class="qanswer"><button></button></ul>
-            <ul class="qanswer"><button></button></ul>
-            <ul class="qanswer"><button></button></ul>
+            <ul id="qanswer1"><button></button></ul>
+            <ul id="qanswer2"><button></button></ul>
+            <ul id="qanswer3"><button></button></ul>
+            <ul id="qanswer4"><button></button></ul>
 
         </li>
     </section>
