moved to id elements to proper tag in html implemented quiz in script.js

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section>
         <p id="qquestion"></p>
         <li>
-            <ul id="qanswer1"><button></button></ul>
-            <ul id="qanswer2"><button></button></ul>
-            <ul id="qanswer3"><button></button></ul>
-            <ul id="qanswer4"><button></button></ul>
+            <ul><button id="qanswer1"></button></ul>
+            <ul><button id="qanswer2"></button></ul>
+            <ul><button id="qanswer3"></button></ul>
+            <ul><button id="qanswer4"></button></ul>
 
         </li>
     </section>
